Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
-    <link rel="Style Sheet" href="./style.css">
+    <link rel="Stylesheet" href="./style.css">
   </head>
 
   <body>
